# cota

./: .gitignore  CONFIGURATION_REPORT.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  activate.sh  auto_test_weather.py  pyproject.toml  restart.sh  run.sh  run_weather_bot.py  setup.py  simple_test.py  test_llm.py  test_weather_bot.sh  test_weather_complete.py
.github/workflows/: mdbook.yml
cota/: __init__.py  __main__.py  agent.py  constant.py  dst.py  processor.py  server.py  store.py  task.py
cota/actions/: __init__.py  action.py  bot_utter.py  form.py  rag.py  selector.py  user_utter.py
cota/actions/executors/: base.py  http.py  mcp.py  plugin.py  python.py  script.py
cota/actions/plugins/: base.py  example.py
cota/bots/pet/: README.md  agent.yml  endpoints.yml
cota/bots/weather/: README.md  agent.yml  endpoints.yml
cota/channels/: __init__.py  channel.py  cmdline.py  connection.py  room.py  socketio.py  sse.py  utils.py  websocket.py
cota/dpl/: dpl.py  llm.py  match.py  trigger.py
cota/knowledge/: __init__.py  knowledge.py  llm_knowledge.py
cota/llm/: __init__.py  base.py  custom.py  factory.py  llm.py  openai.py
cota/message/: message.py
cota/utils/: common.py  io.py  parser.py
cota/utils/http/: __init__.py  client.py  manager.py
detail_code_explain/: 01_任务型对话能力分析.md  02_代码入口分析.md  03_核心机制详解.md  04_架构图解.md  05_总结与建议.md
docs/: book.toml
docs/src/: README.md  SUMMARY.md  chapter_1.md  chapter_2.md
docs/src/concepts/: action.md  agent.md  channel.md  dpl.md  dst.md  llm.md  message.md  task.md
docs/theme/: custom.css  custom.js
manual/: README.md  agent_local.py  dst_local.py  main.py  processor_local.py
plans/: cashier_react_architecture.md
tests/: test_llm.py
tests/actions/: test_action.py  test_response.py
(+18 files in other folders)
